--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -36,3 +36,9 @@ body {
     color: var(--color-dark-1);
     background-color: var(--color-primary-dark);
 }
+
+// 1385 ==> 100%                1200px
+
+// 415 ==> sidebar 30%          360px 30%
+// 854 ==> main 62%             744px 62%
+// 116 ==> header 8%            96px 8%
