--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -3,16 +3,29 @@
     height: 80rem;
     margin: 8rem auto;
     background-color: var(--color-primary);
+
+    display: flex;
 }
 
 .header {
-    width: 9rem;
+    width: 8%;
     height: 100%;
-    padding: 2.5rem 0;
+    padding: 2.8rem 0;
     background-color: var(--color-light-1);
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+}
+
+.main {
+    width: 62%;
+    height: 100%;
+}
+
+.sidebar {
+    width: 30%;
+    height: 100%;
+    background-color: var(--color-primary-light);
 }
