--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,8 +3,8 @@
     --color-primary-light: #FAFCFE;
     --color-primary-dark: #EAF0F8;
     
-    --color-secondary: #3827FF; 
-    --color-secondary-dark: #3100EC;
+    --color-secondary: #0D53FC; 
+    --color-secondary-dark: #0044E9;
 
     --color-red: #fc114c;
     
@@ -42,3 +42,6 @@ body {
 // 415 ==> sidebar 30%          360px 30%
 // 854 ==> main 62%             744px 62%
 // 116 ==> header 8%            96px 8%
+
+// 677 ==> appointement 50%     600px 50% ( 80% of main )
+// 122 ==> appoi height 8.8%
