--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,8 @@
   --color-primary: #F6F9FD;
   --color-primary-light: #FAFCFE;
   --color-primary-dark: #EAF0F8;
-  --color-secondary: #3827FF;
-  --color-secondary-dark: #3100EC;
+  --color-secondary: #0D53FC;
+  --color-secondary-dark: #0044E9;
   --color-red: #fc114c;
   --color-light-1: #FFF;
   --color-light-3: #989EA9;
@@ -52,6 +52,7 @@ body {
 }
 
 .notification__box {
+  display: inline-block;
   position: relative;
 }
 
@@ -63,6 +64,93 @@ body {
   position: absolute;
   top: 0;
   right: 0;
+}
+
+.notification__icon-title {
+  top: 1.8rem;
+  right: -1.2rem;
+}
+
+.section__title {
+  font-size: 2.2rem;
+  font-weight: 400;
+  padding: 1.75rem 0;
+  display: inline-block;
+}
+
+.appointement {
+  width: 100%;
+  height: 10rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.appointement .detail {
+  width: 60%;
+  padding: 2.8rem;
+  background-color: var(--color-secondary);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.appointement .detail__time {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.appointement .detail__icon {
+  width: 2rem;
+  height: 2rem;
+  margin-right: .8rem;
+  fill: var(--color-light-1);
+}
+
+.appointement .detail__clock {
+  font-size: 1.8rem;
+  line-height: 2rem;
+  letter-spacing: 1px;
+  color: var(--color-light-1);
+}
+
+.appointement .detail__text {
+  font-size: 1.3rem;
+  font-weight: 500;
+  line-height: 2rem;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.appointement .profil {
+  width: 40%;
+  padding: 2.8rem;
+  background-color: var(--color-secondary-dark);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.appointement .profil__image {
+  width: 3.5rem;
+  margin-right: 1.5rem;
+  border-radius: 15%;
+}
+
+.appointement .profil__name {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: var(--color-light-1);
 }
 
 .container {
@@ -98,10 +186,20 @@ body {
 .main {
   width: 62%;
   height: 100%;
+  padding: 4rem 0;
 }
 
 .sidebar {
   width: 30%;
   height: 100%;
   background-color: var(--color-primary-light);
+}
+
+.section {
+  width: 85%;
+  margin: 0 auto;
+}
+
+.section:not(:last-child) {
+  margin-bottom: 3rem;
 }
