--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -20,6 +20,7 @@
 .notification {
 
     &__box {
+        display: inline-block;
         position: relative;
     }
 
@@ -32,6 +33,79 @@
         position: absolute;
         top: 0;
         right: 0;
+
+        &-title {
+            top: 1.8rem;
+            right: -1.2rem;
+        }
+    }
+
+}
+
+.section {
+
+    &__title {
+        font-size: 2.2rem;
+        font-weight: 400;
+        padding: 1.75rem 0;
+        display: inline-block;
+
+    }
+}
+
+.appointement {
+    width: 100%;
+    height: 10rem;
+    display: flex;
+
+    .detail {
+        width: 60%;
+        padding: 2.8rem;
+        background-color: var(--color-secondary);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        &__time {
+            display: flex;
+        }
+        &__icon {
+            width: 2rem;
+            height: 2rem;
+            margin-right: .8rem;
+            fill: var(--color-light-1);
+        }
+        &__clock {
+            font-size: 1.8rem;
+            line-height: 2rem;
+            letter-spacing: 1px;
+            color: var(--color-light-1);
+        }
+        &__text {
+            font-size: 1.3rem;
+            font-weight: 500;
+            line-height: 2rem;
+            color: rgba(255,255,255, .50);
+        }
     }
     
+    .profil {
+        width: 40%;
+        padding: 2.8rem;
+        background-color: var(--color-secondary-dark);
+        display: flex;
+        align-items: center;
+
+        &__image {
+            width: 3.5rem;
+            margin-right: 1.5rem;
+            border-radius: 15%;
+        }
+        &__name {
+            font-size: 1.5rem;
+            font-weight: 500;
+            color: var(--color-light-1);
+        }
+    }
+
 }
