--- a/css/main.css
+++ b/css/main.css
@@ -6,9 +6,17 @@
   --color-secondary-dark: #0044E9;
   --color-red: #fc114c;
   --color-light-1: #FFF;
+  --color-light-2: #92A1B7;
   --color-light-3: #989EA9;
   --color-dark-1: #2B323B;
   --color-dark-2: #3F3B3F;
+  --color-grey-light-1: #faf9f9;
+  --color-grey-light-2: #f4f2f2;
+  --color-grey-light-3: #f0eeee;
+  --color-grey-light-4: #ccc;
+  --color-grey-dark-1: #333;
+  --color-grey-dark-2: #777;
+  --color-grey-dark-3: #999;
 }
 
 * {
@@ -78,15 +86,19 @@ body {
   display: inline-block;
 }
 
-.appointement {
+.card {
   width: 100%;
-  height: 10rem;
+  min-height: 10rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.appointement .detail {
+.card:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.card__primary .detail {
   width: 60%;
   padding: 2.8rem;
   background-color: var(--color-secondary);
@@ -102,34 +114,38 @@ body {
           justify-content: space-between;
 }
 
-.appointement .detail__time {
+.card__primary .detail-secondary {
+  background-color: var(--color-light-1);
+}
+
+.card__primary .detail__time {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.appointement .detail__icon {
+.card__primary .detail__icon {
   width: 2rem;
   height: 2rem;
   margin-right: .8rem;
   fill: var(--color-light-1);
 }
 
-.appointement .detail__clock {
+.card__primary .detail__clock {
   font-size: 1.8rem;
-  line-height: 2rem;
+  line-height: 2.2rem;
   letter-spacing: 1px;
   color: var(--color-light-1);
 }
 
-.appointement .detail__text {
+.card__primary .detail__text {
   font-size: 1.3rem;
   font-weight: 500;
   line-height: 2rem;
   color: rgba(255, 255, 255, 0.5);
 }
 
-.appointement .profil {
+.card__primary .profil {
   width: 40%;
   padding: 2.8rem;
   background-color: var(--color-secondary-dark);
@@ -141,21 +157,94 @@ body {
           align-items: center;
 }
 
-.appointement .profil__image {
+.card__primary .profil-secondary {
+  background-color: var(--color-light-1);
+}
+
+.card__primary .profil__image {
   width: 3.5rem;
   margin-right: 1.5rem;
   border-radius: 15%;
 }
 
-.appointement .profil__name {
+.card__primary .profil__name {
   font-size: 1.5rem;
   font-weight: 500;
   color: var(--color-light-1);
 }
 
+.card__secondary .detail {
+  width: 60%;
+  padding: 2.8rem;
+  background-color: var(--color-light-1);
+  border-right: 1px var(--color-primary-dark) solid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.card__secondary .detail__time {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 1.2rem;
+}
+
+.card__secondary .detail__icon {
+  width: 1.3rem;
+  height: 1.3rem;
+  margin-right: .8rem;
+  fill: var(--color-grey-dark-3);
+}
+
+.card__secondary .detail__clock {
+  font-size: 1.4rem;
+  line-height: 1.4rem;
+  letter-spacing: 1px;
+  color: var(--color-grey-dark-3);
+}
+
+.card__secondary .detail__text {
+  font-size: 1.5rem;
+  font-weight: 500;
+  letter-spacing: .5px;
+  color: var(--color-dark-1);
+}
+
+.card__secondary .profil {
+  width: 40%;
+  padding: 2.8rem;
+  background-color: var(--color-light-1);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.card__secondary .profil__image {
+  width: 3.5rem;
+  margin-right: 1.5rem;
+  border-radius: 15%;
+}
+
+.card__secondary .profil__name {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: var(--color-secondary);
+}
+
 .container {
   max-width: 120rem;
-  height: 80rem;
+  height: 73rem;
   margin: 8rem auto;
   background-color: var(--color-primary);
   display: -webkit-box;
