--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -9,10 +9,19 @@
     --color-red: #fc114c;
     
     --color-light-1: #FFF; 
-    --color-light-3: #989EA9;
+    --color-light-2: #92A1B7;
+    --color-light-3: #989EA9; 
 
     --color-dark-1: #2B323B;
     --color-dark-2: #3F3B3F;
+
+    --color-grey-light-1: #faf9f9;
+    --color-grey-light-2: #f4f2f2;
+    --color-grey-light-3: #f0eeee;
+    --color-grey-light-4: #ccc;
+    --color-grey-dark-1: #333;
+    --color-grey-dark-2: #777;
+    --color-grey-dark-3: #999;
 }
 
 * {
