--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -53,58 +53,127 @@
     }
 }
 
-.appointement {
+.card {
     width: 100%;
-    height: 10rem;
+    min-height: 10rem;
     display: flex;
 
-    .detail {
-        width: 60%;
-        padding: 2.8rem;
-        background-color: var(--color-secondary);
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+    &:not(:last-child) {
+        margin-bottom: 2rem;
+    }
 
-        &__time {
+    &__primary {
+        .detail {
+            width: 60%;
+            padding: 2.8rem;
+            background-color: var(--color-secondary);
             display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+    
+            &-secondary {
+                background-color: var(--color-light-1);
+            }
+            
+            &__time {
+                display: flex;
+            }
+            &__icon {
+                width: 2rem;
+                height: 2rem;
+                margin-right: .8rem;
+                fill: var(--color-light-1);
+            }
+            &__clock {
+                font-size: 1.8rem;
+                line-height: 2.2rem;
+                letter-spacing: 1px;
+                color: var(--color-light-1);
+            }
+            &__text {
+                font-size: 1.3rem;
+                font-weight: 500;
+                line-height: 2rem;
+                color: rgba(255,255,255, .50);
+            }
         }
-        &__icon {
-            width: 2rem;
-            height: 2rem;
-            margin-right: .8rem;
-            fill: var(--color-light-1);
-        }
-        &__clock {
-            font-size: 1.8rem;
-            line-height: 2rem;
-            letter-spacing: 1px;
-            color: var(--color-light-1);
-        }
-        &__text {
-            font-size: 1.3rem;
-            font-weight: 500;
-            line-height: 2rem;
-            color: rgba(255,255,255, .50);
+        
+        .profil {
+            width: 40%;
+            padding: 2.8rem;
+            background-color: var(--color-secondary-dark);
+            display: flex;
+            align-items: center;
+    
+            &-secondary {
+                background-color: var(--color-light-1);
+            }
+    
+            &__image {
+                width: 3.5rem;
+                margin-right: 1.5rem;
+                border-radius: 15%;
+            }
+            &__name {
+                font-size: 1.5rem;
+                font-weight: 500;
+                color: var(--color-light-1);
+            }
         }
     }
-    
-    .profil {
-        width: 40%;
-        padding: 2.8rem;
-        background-color: var(--color-secondary-dark);
-        display: flex;
-        align-items: center;
 
-        &__image {
-            width: 3.5rem;
-            margin-right: 1.5rem;
-            border-radius: 15%;
+    &__secondary {
+        
+        .detail {
+            width: 60%;
+            padding: 2.8rem;
+            background-color: var(--color-light-1);
+            border-right: 1px var(--color-primary-dark) solid;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            &__time {
+                display: flex;
+                margin-bottom: 1.2rem;
+            }
+            &__icon {
+                width: 1.3rem;
+                height: 1.3rem;
+                margin-right: .8rem;
+                fill: var(--color-grey-dark-3);
+            }
+            &__clock {
+                font-size: 1.4rem;
+                line-height: 1.4rem;
+                letter-spacing: 1px;
+                color: var(--color-grey-dark-3);
+            }
+            &__text {
+                font-size: 1.5rem;
+                font-weight: 500;
+                letter-spacing: .5px;
+                color: var(--color-dark-1);
+            }
         }
-        &__name {
-            font-size: 1.5rem;
-            font-weight: 500;
-            color: var(--color-light-1);
+        
+        .profil {
+            width: 40%;
+            padding: 2.8rem;
+            background-color: var(--color-light-1);
+            display: flex;
+            align-items: center;
+
+            &__image {
+                width: 3.5rem;
+                margin-right: 1.5rem;
+                border-radius: 15%;
+            }
+            &__name {
+                font-size: 1.5rem;
+                font-weight: 500;
+                color: var(--color-secondary);
+            }
         }
     }
 
