--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,36 @@ body {
   display: inline-block;
 }
 
+.section .title__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.section .title__notification {
+  display: inline-block;
+  width: 3rem;
+  height: 3rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+  background-color: #E7F0F8;
+  color: var(--color-light-2);
+  border-radius: 25%;
+  margin-left: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .card {
   width: 100%;
   min-height: 10rem;
