--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -49,7 +49,30 @@
         font-weight: 400;
         padding: 1.75rem 0;
         display: inline-block;
+    }
 
+    .title {
+
+        &__box {
+            display: flex;
+            align-items: center;
+        }
+
+        &__notification {
+            display: inline-block;
+            width: 3rem;
+            height: 3rem;
+            font-size: 1.5rem;
+            font-weight: 500;
+            background-color: #E7F0F8;
+            color: var(--color-light-2);
+            border-radius: 25%;
+            margin-left: 1.5rem;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
 }
 
