--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,8 @@
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
+  --shadow-dark: 0 2rem 5rem rgba(0,0,0,.06);
+  --shadow-light: 0 .5rem 1rem rgba(0,0,0,.06);
 }
 
 * {
@@ -122,6 +124,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-shadow: var(--shadow-light);
+          box-shadow: var(--shadow-light);
 }
 
 .card:not(:last-child) {
@@ -272,11 +276,80 @@ body {
   color: var(--color-secondary);
 }
 
+.discount {
+  width: 100%;
+  height: 8rem;
+  background-color: var(--color-light-1);
+  padding: 2.1rem;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0.5rem 5rem rgba(0, 0, 0, 0.05);
+          box-shadow: 0 0.5rem 5rem rgba(0, 0, 0, 0.05);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.discount__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.discount .title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: .5rem;
+}
+
+.discount .title__icon {
+  width: 1.4rem;
+  height: 1.4rem;
+  margin-right: .5rem;
+  fill: var(--color-dark-1);
+}
+
+.discount .title__text {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+  color: var(--color-dark-1);
+}
+
+.discount__question {
+  font-size: 1.1rem;
+  line-height: 1.2rem;
+  color: #ADBDE0;
+}
+
+.discount__number {
+  font-size: 2.5rem;
+  color: var(--color-secondary);
+}
+
 .container {
   max-width: 120rem;
   height: 73rem;
   margin: 8rem auto;
   background-color: var(--color-primary);
+  -webkit-box-shadow: var(--shadow-dark);
+          box-shadow: var(--shadow-dark);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -311,6 +384,7 @@ body {
 .sidebar {
   width: 30%;
   height: 100%;
+  padding: 3rem;
   background-color: var(--color-primary-light);
 }
 
