--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -22,6 +22,10 @@
     --color-grey-dark-1: #333;
     --color-grey-dark-2: #777;
     --color-grey-dark-3: #999;
+
+    
+    --shadow-dark: 0 2rem 5rem rgba(0,0,0,.06);
+    --shadow-light: 0 .5rem 1rem rgba(0,0,0,.06);
 }
 
 * {
