--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -42,6 +42,8 @@
 
 }
 
+// 🐪 MAIN CONTENT ------------------------------------
+
 .section {
 
     &__title {
@@ -80,6 +82,7 @@
     width: 100%;
     min-height: 10rem;
     display: flex;
+    box-shadow: var(--shadow-light);
 
     &:not(:last-child) {
         margin-bottom: 2rem;
@@ -198,6 +201,56 @@
                 color: var(--color-secondary);
             }
         }
+    }
+
+}
+
+// 🐪 SIDEBAR CONTENT ----------------------------------------
+
+.discount {
+    width: 100%;
+    height: 8rem;
+    background-color: var(--color-light-1);
+    padding: 2.1rem;
+    border-radius: 5px;
+    box-shadow: 0 .5rem 5rem rgba(0,0,0,.05);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &__text {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .title {
+        display: flex;
+        align-items: center;
+        margin-bottom: .5rem;
+        &__icon {
+            width: 1.4rem;
+            height: 1.4rem;
+            margin-right: .5rem;
+            fill: var(--color-dark-1);
+        }
+        &__text {
+            font-size: 1.5rem;
+            font-weight: 500;
+            line-height: 1.5rem;
+            color: var(--color-dark-1);
+        }
+    }
+
+    &__question {
+        font-size: 1.1rem;
+        line-height: 1.2rem;
+        color: #ADBDE0;
+    }
+
+    &__number {
+        font-size: 2.5rem;
+        color: var(--color-secondary);
     }
 
 }
