--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -3,6 +3,7 @@
     height: 73rem;
     margin: 8rem auto;
     background-color: var(--color-primary);
+    box-shadow: var(--shadow-dark);
 
     display: flex;
 }
@@ -28,6 +29,7 @@
 .sidebar {
     width: 30%;
     height: 100%;
+    padding: 3rem;
     background-color: var(--color-primary-light);
 }
 
