--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -11,6 +11,7 @@
     --color-light-1: #FFF; 
     --color-light-2: #92A1B7;
     --color-light-3: #989EA9; 
+    --color-text-2: #ADBDE0;
 
     --color-dark-1: #2B323B;
     --color-dark-2: #3F3B3F;
@@ -23,6 +24,7 @@
     --color-grey-dark-2: #777;
     --color-grey-dark-3: #999;
 
+    --border-light: 1px var(--color-primary-dark) solid;
     
     --shadow-dark: 0 2rem 5rem rgba(0,0,0,.06);
     --shadow-light: 0 .5rem 1rem rgba(0,0,0,.06);
