--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
   --color-light-1: #FFF;
   --color-light-2: #92A1B7;
   --color-light-3: #989EA9;
+  --color-text-2: #ADBDE0;
   --color-dark-1: #2B323B;
   --color-dark-2: #3F3B3F;
   --color-grey-light-1: #faf9f9;
@@ -17,6 +18,7 @@
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
+  --border-light: 1px var(--color-primary-dark) solid;
   --shadow-dark: 0 2rem 5rem rgba(0,0,0,.06);
   --shadow-light: 0 .5rem 1rem rgba(0,0,0,.06);
 }
@@ -211,7 +213,7 @@ body {
   width: 60%;
   padding: 2.8rem;
   background-color: var(--color-light-1);
-  border-right: 1px var(--color-primary-dark) solid;
+  border-right: var(--border-light);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -335,12 +337,79 @@ body {
 .discount__question {
   font-size: 1.1rem;
   line-height: 1.2rem;
-  color: #ADBDE0;
+  color: var(--color-text-2);
 }
 
 .discount__number {
   font-size: 2.5rem;
   color: var(--color-secondary);
+}
+
+.account {
+  margin: 4rem 0 0 0;
+  padding: 4rem 3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.account__image {
+  width: 12rem;
+  border-radius: 15%;
+}
+
+.account__name {
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 2rem;
+  margin: 2rem 0 .5rem 0;
+}
+
+.account__description {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 2rem;
+  color: var(--color-text-2);
+}
+
+.account__settings {
+  width: 2rem;
+  height: 2rem;
+  fill: var(--color-text-2);
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.account .phone {
+  margin: 1.5rem;
+  padding: 1rem 2.5rem;
+  border: var(--border-light);
+  border-radius: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.account .phone__icon {
+  width: 2.2rem;
+  height: 2.2rem;
+  margin-right: .8rem;
+  fill: var(--color-dark-1);
+}
+
+.account .phone__number {
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: var(--color-dark-1);
 }
 
 .container {
