--- a/css/main.css
+++ b/css/main.css
@@ -5,19 +5,11 @@
   --color-secondary: #0D53FC;
   --color-secondary-dark: #0044E9;
   --color-red: #fc114c;
-  --color-light-1: #FFF;
-  --color-light-2: #92A1B7;
-  --color-light-3: #989EA9;
+  --color-text-1: #2B323B;
   --color-text-2: #ADBDE0;
-  --color-dark-1: #2B323B;
-  --color-dark-2: #3F3B3F;
-  --color-grey-light-1: #faf9f9;
-  --color-grey-light-2: #f4f2f2;
-  --color-grey-light-3: #f0eeee;
-  --color-grey-light-4: #ccc;
-  --color-grey-dark-1: #333;
-  --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999;
+  --color-light-1: #FFF;
+  --color-light-2: #E7F0F8;
+  --color-light-3: #92A1B7;
   --border-light: 1px var(--color-primary-dark) solid;
   --shadow-dark: 0 2rem 5rem rgba(0,0,0,.06);
   --shadow-light: 0 .5rem 1rem rgba(0,0,0,.06);
@@ -43,7 +35,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   line-height: 1.6;
-  color: var(--color-dark-1);
+  color: var(--color-text-1);
   background-color: var(--color-primary-dark);
 }
 
@@ -55,7 +47,7 @@ body {
 .header__icon {
   width: 2.5rem;
   height: 2.5rem;
-  fill: var(--color-dark-1);
+  fill: var(--color-text-1);
   cursor: pointer;
 }
 
@@ -105,8 +97,8 @@ body {
   height: 3rem;
   font-size: 1.5rem;
   font-weight: 500;
-  background-color: #E7F0F8;
-  color: var(--color-light-2);
+  background-color: var(--color-light-2);
+  color: var(--color-light-3);
   border-radius: 25%;
   margin-left: 1.5rem;
   display: -webkit-box;
@@ -251,7 +243,7 @@ body {
   font-size: 1.5rem;
   font-weight: 500;
   letter-spacing: .5px;
-  color: var(--color-dark-1);
+  color: var(--color-text-1);
 }
 
 .card__secondary .profil {
@@ -283,7 +275,7 @@ body {
   height: 8rem;
   background-color: var(--color-light-1);
   padding: 2.1rem;
-  border-radius: 5px;
+  border-radius: 10px;
   -webkit-box-shadow: 0 0.5rem 5rem rgba(0, 0, 0, 0.05);
           box-shadow: 0 0.5rem 5rem rgba(0, 0, 0, 0.05);
   display: -webkit-box;
@@ -324,14 +316,14 @@ body {
   width: 1.4rem;
   height: 1.4rem;
   margin-right: .5rem;
-  fill: var(--color-dark-1);
+  fill: var(--color-text-1);
 }
 
 .discount .title__text {
   font-size: 1.5rem;
   font-weight: 500;
   line-height: 1.5rem;
-  color: var(--color-dark-1);
+  color: var(--color-text-1);
 }
 
 .discount__question {
@@ -362,7 +354,7 @@ body {
 }
 
 .account__image {
-  width: 12rem;
+  width: 10rem;
   border-radius: 15%;
 }
 
@@ -381,8 +373,8 @@ body {
 }
 
 .account__settings {
-  width: 2rem;
-  height: 2rem;
+  width: 1.8rem;
+  height: 1.8rem;
   fill: var(--color-text-2);
   position: absolute;
   top: 0;
@@ -403,18 +395,117 @@ body {
   width: 2.2rem;
   height: 2.2rem;
   margin-right: .8rem;
-  fill: var(--color-dark-1);
+  fill: var(--color-text-1);
 }
 
 .account .phone__number {
   font-size: 1.4rem;
   font-weight: 500;
-  color: var(--color-dark-1);
+  color: var(--color-text-1);
+}
+
+.referrals__accounts {
+  margin-top: 2rem;
+  padding: .5rem 0;
+  border-right: var(--border-light);
+}
+
+.referrals__accounts:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.referrals .headeref {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.referrals .headeref__title {
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+
+.referrals .headeref__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.referrals .headeref__notification {
+  display: inline-block;
+  width: 2.2rem;
+  height: 2.2rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  background-color: var(--color-light-2);
+  color: var(--color-light-3);
+  border-radius: 25%;
+  margin-left: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.referrals .headeref__discount {
+  font-size: 1rem;
+  padding: .5rem 1rem;
+  border-radius: 7px;
+  color: var(--color-secondary);
+  background-color: var(--color-light-2);
+}
+
+.referrals .headeref__bold {
+  font-weight: 600;
+}
+
+.referrals .referral {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.referrals .referral:not(:last-of-type) {
+  margin-bottom: 1.2rem;
+}
+
+.referrals .referral__image {
+  width: 3.4rem;
+  margin-right: 1rem;
+  border-radius: 6px;
+}
+
+.referrals .referral__name {
+  font-size: 1.17rem;
+  font-weight: 600;
+}
+
+.referrals .referral__date {
+  font-size: 1.17rem;
+  font-weight: 500;
+  color: var(--color-grey-dark-3);
 }
 
 .container {
   max-width: 120rem;
-  height: 73rem;
+  height: 78rem;
   margin: 8rem auto;
   background-color: var(--color-primary);
   -webkit-box-shadow: var(--shadow-dark);
