--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -11,7 +11,7 @@
     &__icon {
         width: 2.5rem;
         height: 2.5rem;
-        fill: var(--color-dark-1);
+        fill: var(--color-text-1);
         cursor: pointer;
 
         &-light {
@@ -69,8 +69,8 @@
             height: 3rem;
             font-size: 1.5rem;
             font-weight: 500;
-            background-color: #E7F0F8;
-            color: var(--color-light-2);
+            background-color: var(--color-light-2);
+            color: var(--color-light-3);
             border-radius: 25%;
             margin-left: 1.5rem;
 
@@ -182,7 +182,7 @@
                 font-size: 1.5rem;
                 font-weight: 500;
                 letter-spacing: .5px;
-                color: var(--color-dark-1);
+                color: var(--color-text-1);
             }
         }
         
@@ -215,7 +215,7 @@
     height: 8rem;
     background-color: var(--color-light-1);
     padding: 2.1rem;
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 0 .5rem 5rem rgba(0,0,0,.05);
     display: flex;
     justify-content: space-between;
@@ -235,13 +235,13 @@
             width: 1.4rem;
             height: 1.4rem;
             margin-right: .5rem;
-            fill: var(--color-dark-1);
+            fill: var(--color-text-1);
         }
         &__text {
             font-size: 1.5rem;
             font-weight: 500;
             line-height: 1.5rem;
-            color: var(--color-dark-1);
+            color: var(--color-text-1);
         }
     }
 
@@ -267,7 +267,7 @@
     position: relative;
 
     &__image {
-        width: 12rem;
+        width: 10rem;
         border-radius: 15%;
     }
     &__name {
@@ -283,8 +283,8 @@
         color: var(--color-text-2);
     }
     &__settings {
-        width: 2rem;
-        height: 2rem;
+        width: 1.8rem;
+        height: 1.8rem;
         fill: var(--color-text-2);
         position: absolute;
         top: 0;
@@ -301,12 +301,90 @@
             width: 2.2rem;
             height: 2.2rem;
             margin-right: .8rem;
-            fill: var(--color-dark-1);
+            fill: var(--color-text-1);
         }
         &__number {
             font-size: 1.4rem;
             font-weight: 500;
-            color: var(--color-dark-1);
+            color: var(--color-text-1);
+        }
+    }
+
+}
+
+.referrals {
+
+    &__accounts {
+        margin-top: 2rem;
+        padding: .5rem 0;
+        border-right: var(--border-light);
+
+        &:not(:last-child) {
+            margin-bottom: 1rem;
+        }
+    }
+
+    .headeref {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        &__title {
+            font-size: 1.6rem;
+            font-weight: 500;
+        }
+        &__box {
+            display: flex;
+            align-items: center;
+        }
+        &__notification {
+            display: inline-block;
+            width: 2.2rem;
+            height: 2.2rem;
+            font-size: 1.2rem;
+            font-weight: 500;
+            background-color: var(--color-light-2);
+            color: var(--color-light-3);
+            border-radius: 25%;
+            margin-left: 1.5rem;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        &__discount {
+            font-size: 1rem;
+            padding: .5rem 1rem;
+            border-radius: 7px;
+            color: var(--color-secondary);
+            background-color: var(--color-light-2);
+        }
+        &__bold {
+            font-weight: 600;
+        }
+    }
+
+    .referral {
+        display: flex;
+        align-items: center;
+        &:not(:last-of-type) {
+            margin-bottom: 1.2rem;
+        }
+
+        &__image {
+            width: 3.4rem;
+            margin-right: 1rem;
+            border-radius: 6px;
+        }
+        &__name {
+            font-size: 1.17rem;
+            font-weight: 600;
+        }
+        &__date {
+            font-size: 1.17rem;
+            font-weight: 500;
+            color: var(--color-grey-dark-3);
         }
     }
 
