--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -216,6 +216,7 @@
     background-color: var(--color-light-1);
     padding: 2.1rem;
     border-radius: 10px;
+    cursor: pointer;
     box-shadow: 0 .5rem 5rem rgba(0,0,0,.05);
     display: flex;
     justify-content: space-between;
@@ -286,6 +287,7 @@
         width: 1.8rem;
         height: 1.8rem;
         fill: var(--color-text-2);
+        cursor: pointer;
         position: absolute;
         top: 0;
         right: 0;
@@ -359,6 +361,7 @@
             border-radius: 7px;
             color: var(--color-secondary);
             background-color: var(--color-light-2);
+            cursor: pointer;
         }
         &__bold {
             font-weight: 600;
