--- a/css/main.css
+++ b/css/main.css
@@ -276,6 +276,7 @@ body {
   background-color: var(--color-light-1);
   padding: 2.1rem;
   border-radius: 10px;
+  cursor: pointer;
   -webkit-box-shadow: 0 0.5rem 5rem rgba(0, 0, 0, 0.05);
           box-shadow: 0 0.5rem 5rem rgba(0, 0, 0, 0.05);
   display: -webkit-box;
@@ -376,6 +377,7 @@ body {
   width: 1.8rem;
   height: 1.8rem;
   fill: var(--color-text-2);
+  cursor: pointer;
   position: absolute;
   top: 0;
   right: 0;
@@ -467,6 +469,7 @@ body {
   border-radius: 7px;
   color: var(--color-secondary);
   background-color: var(--color-light-2);
+  cursor: pointer;
 }
 
 .referrals .headeref__bold {
