--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -9,6 +9,7 @@
 
     --color-text-1: #2B323B;
     --color-text-2: #ADBDE0;
+    --color-text-3: #999;
     
     --color-light-1: #FFF; 
     --color-light-2: #E7F0F8;
