--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
   --color-red: #fc114c;
   --color-text-1: #2B323B;
   --color-text-2: #ADBDE0;
+  --color-text-3: #999;
   --color-light-1: #FFF;
   --color-light-2: #E7F0F8;
   --color-light-3: #92A1B7;
@@ -229,14 +230,14 @@ body {
   width: 1.3rem;
   height: 1.3rem;
   margin-right: .8rem;
-  fill: var(--color-grey-dark-3);
+  fill: var(--color-text-3);
 }
 
 .card__secondary .detail__clock {
   font-size: 1.4rem;
   line-height: 1.4rem;
   letter-spacing: 1px;
-  color: var(--color-grey-dark-3);
+  color: var(--color-text-3);
 }
 
 .card__secondary .detail__text {
@@ -490,25 +491,25 @@ body {
 }
 
 .referrals .referral__image {
-  width: 3.4rem;
+  width: 3.5rem;
   margin-right: 1rem;
   border-radius: 6px;
 }
 
 .referrals .referral__name {
-  font-size: 1.17rem;
+  font-size: 1.3rem;
   font-weight: 600;
 }
 
 .referrals .referral__date {
   font-size: 1.17rem;
   font-weight: 500;
-  color: var(--color-grey-dark-3);
+  color: var(--color-text-3);
 }
 
 .container {
   max-width: 120rem;
-  height: 78rem;
+  height: 79rem;
   margin: 8rem auto;
   background-color: var(--color-primary);
   -webkit-box-shadow: var(--shadow-dark);
