--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -170,13 +170,13 @@
                 width: 1.3rem;
                 height: 1.3rem;
                 margin-right: .8rem;
-                fill: var(--color-grey-dark-3);
+                fill: var(--color-text-3);
             }
             &__clock {
                 font-size: 1.4rem;
                 line-height: 1.4rem;
                 letter-spacing: 1px;
-                color: var(--color-grey-dark-3);
+                color: var(--color-text-3);
             }
             &__text {
                 font-size: 1.5rem;
@@ -376,18 +376,18 @@
         }
 
         &__image {
-            width: 3.4rem;
+            width: 3.5rem;
             margin-right: 1rem;
             border-radius: 6px;
         }
         &__name {
-            font-size: 1.17rem;
+            font-size: 1.3rem;
             font-weight: 600;
         }
         &__date {
             font-size: 1.17rem;
             font-weight: 500;
-            color: var(--color-grey-dark-3);
+            color: var(--color-text-3);
         }
     }
 
